# cronenbear

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: check_rust.yml  dependabot_automerge.yml
data/: aliases.toml
src/: aliases.rs  country_calendar.rs  double_lookup_table.rs  google_public_calendar.rs  index_page.rs  lib.rs  main.rs  merged_calendar.rs  religion_calendar.rs
templates/: index.html
