[package]
name = "cronenbear"
version = "0.1.0"
edition = "2024"

[dependencies]
codes-iso-3166 = { version = "*", default-features = false }
ureq = { version = "*" }
icalendar = { version = "*", features= ["parser"] }
toml = { version = "*" }
serde_derive = "1"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8", features = ['macros']}
axum-macros = "0.5"
tokio = { version = "1" }
askama = "0.14.0"
array_tool = "1.0.3"

