[package]
name = "cronenbear"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mscherer/cronenbear"

[profile.release]
strip = true
lto = true

[dependencies]
codes-iso-3166 = { version = "*", default-features = false, features = ["full_name"] }
ureq = { version = "*", default-features = false, features = ["rustls"] }
icalendar = { version = "*", features = ["parser"] }
toml = { version = "*", default-features = false, features = ["parse", "serde"] }
serde = { version = "*", features = ["derive"] }
axum = { version = "*", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "*", default-features = false, features = ["macros", "rt", "net"] }
askama = { version = "*", default-features = false, features = ["derive", "alloc"] }
array_tool = { version = "*", default-features = false }
country-emoji = "0.2.0"
itertools = "*"
tracing = { version = "*", default-features = false }
tracing-subscriber = { version = "*", default-features = false, features = ["fmt"] }
tower-http = { version = "*", default-features = false, features = ["trace"] }
axum-response-cache = { version = "*", default-features = false, features= ["axum08"] }

